Fixes interpreter crash see bug #693543.

If a PCL job exited in the middle of a raster stream graphics mode was
not terminated properly at the end of the job, instead we tried to
shut down graphics later at the time of interpreter shutdown which
leads to a unordered freeing of resources.